# deep_learning

./: .gitattributes  .gitignore  README.md  Tensorflow Installation.ipynb  cropped_image.bag
10_objects/lenet5/: depth_data  lenet5.ipynb
24_objects/lenet5/: depth_data  lenet5.ipynb
27_objects/lenet5/: depth_data  lenet5.ipynb  new_model.ckpt
27_objects2/: auto_recognition2.yaml  model.ckpt  model1.ckpt
LeNet5/: lenet5.ipynb
Tutorials/: IPython.ipynb  Numpy.ipynb
Tutorials/Tensorflow/: Tensorflow Installation.ipynb  deep_learning_intro.ipynb
Tutorials/Udacity/: 1_notmnist.ipynb  2_fullyconnected.ipynb  4_convolutions.ipynb  5_word2vec.ipynb  6_lstm.ipynb
Udacity/: 1_notmnist.ipynb  3_regularization.ipynb  5_word2vec.ipynb  Deep Learning (Tensorflow).ipynb
Udacity/.ipynb_checkpoints/: Deep Learning (Tensorflow)-checkpoint.ipynb
auto_recognition/: CMakeLists.txt  README.md  package.xml
auto_recognition2/: CMakeLists.txt  LICENSE  README.md  auto_recognition2.yaml  package.xml
data_preprocess/: README.md
data_preprocess/data_pp/: CMakeLists.txt  LICENSE  README.md  package.xml
data_preprocess/data_pp/images/: data_pp.rviz
data_preprocess/data_pp/images/pcd/: name_lists
data_preprocess/data_pp/src/: add_noise.py  crop_images.py  data_pp.cpp  import_data.py  label_images.py  list_names.py
depthnet/: CMakeLists.txt  README.md  package.xml
lenet5/: depth_data  lenet5.ipynb
thesis/: Data Preprocess.ipynb  Data Preprocess2.ipynb  data_description  model.ckpt.data-00000-of-00001  model.ckpt.index  resize.py  small_data
(+590 files in other folders)
